[gd_scene load_steps=3 format=3 uid="uid://dbl48vkyfj1mf"]

[ext_resource type="Script" uid="uid://du3supvqn0mnq" path="res://scripts/ui/elements/property_editors/keybind_editor.gd" id="1_3ftp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ftp3"]
bg_color = Color(0.26750833, 0.47, 0.21149999, 1)

[node name="KeybindEditor" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_right = 520.0
offset_bottom = 50.0
script = ExtResource("1_3ftp3")

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Keybinding name"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BindA" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3ftp3")
toggle_mode = true
clip_text = true

[node name="BindB" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3ftp3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3ftp3")
toggle_mode = true
clip_text = true
